e2e/tests/all/snapshots/color_scheme_button_themes_rest_desktop.snap
---
source: e2e/src/suite.rs
description: color_scheme_button_themes at desktop (rest)
expression: tree
---
generic
  group "Theme"
    button "Switch to the dark theme"
    button "Choose a theme" [expanded=false] [haspopup=menu]
