e2e/tests/all/snapshots/color_scheme_button_themes_rest_mobile.snap
---
source: e2e/src/suite.rs
description: color_scheme_button_themes at mobile (rest)
expression: tree
---
generic
  group "Theme"
    button "Switch to the dark theme"
    button "Choose a theme" [expanded=false] [haspopup=menu]
