e2e/tests/all/snapshots/combobox_open_desktop.snap
---
source: e2e/src/suite.rs
description: combobox at desktop (open)
expression: tree
---
combobox "Fruit" = Apple [expanded] [haspopup=listbox]
  StaticText "Apple"
status [atomic] [live=polite]
  StaticText "5 results"
listbox [orientation=vertical]
  option "Apple" [selected]
    StaticText "Apple"
  option "Banana" [selected=false]
    StaticText "Banana"
  option "Cherry" [selected=false]
    StaticText "Cherry"
  option "Damson" [selected=false]
    StaticText "Damson"
  option "Elderberry" [selected=false]
    StaticText "Elderberry"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
