e2e/tests/all/snapshots/combobox_rest_desktop.snap
---
source: e2e/src/suite.rs
description: combobox at desktop (rest)
expression: tree
---
combobox "Fruit" = Apple [expanded=false] [haspopup=listbox]
  StaticText "Apple"
status [atomic] [live=polite]
