e2e/tests/all/snapshots/combobox_rest_mobile.snap
---
source: e2e/src/suite.rs
description: combobox at mobile (rest)
expression: tree
---
combobox "Fruit" = Apple [expanded=false] [haspopup=listbox]
  StaticText "Apple"
status [atomic] [live=polite]
