e2e/tests/all/snapshots/copy_button_rest_mobile.snap
---
source: e2e/src/suite.rs
description: copy_button at mobile (rest)
expression: tree
---
button "Copy"
status [atomic] [live=polite]
paragraph
  StaticText "cargo add libero"
button "Copy the install command"
status [atomic] [live=polite]
button "Copy"
status [atomic] [live=polite]
button "Copy" [disabled]
status [atomic] [live=polite]
