e2e/tests/all/snapshots/copy_rest_desktop.snap
---
source: e2e/src/suite.rs
description: copy at desktop (rest)
expression: tree
---
button "Copy"
status [atomic] [live=polite]
paragraph
  StaticText "cargo add libero"
button "Copy the install command"
status [atomic] [live=polite]
button "Copy"
  description "Add libero to your project"
status [atomic] [live=polite]
button "Copy" [disabled]
status [atomic] [live=polite]
